processed/jira/txt/LU/LU-17674.txt
Key:        LU-17674
Summary:    inode_owner_or_capable build failure in ll_file_ioctl()
Link:       https://jira.whamcloud.com/browse/LU-17674
Type:       Bug
Priority:   Major
Status:     Resolved
Resolution: Fixed
Assignee:   Qian Yingjin
Reporter:   Jian Yu
Created:    Mon, 25 Mar 2024 18:21:27 +0000
Updated:    Mon, 8 Apr 2024 18:04:12 +0000
Resolved:   Mon, 8 Apr 2024 18:04:12 +0000

--- Description ---
Patch https://review.whamcloud.com/38305 ("LU-10499 pcc: add readonly mode for PCC") introduced the following build failure with kernel 6.7:

  CC [M]  /root/lustre-release/lustre/llite/file.o
/root/lustre-release/lustre/llite/file.c: In function ‘ll_file_ioctl’:
/root/lustre-release/lustre/llite/file.c:4760:45: error: passing argument 1 of ‘inode_owner_or_capable’ from incompatible pointer type [-Werror=incompatible-pointer-types]
 4760 |                 if (!inode_owner_or_capable(&init_user_ns, inode))
      |                                             ^~~~~~~~~~~~~
      |                                             |
      |                                             struct user_namespace *
In file included from include/linux/compat.h:17,
                 from ./arch/x86/include/asm/ia32.h:8,
                 from ./arch/x86/include/asm/elf.h:10,
                 from include/linux/elf.h:6,
                 from include/linux/module.h:19,
                 from /root/lustre-release/libcfs/include/libcfs/libcfs.h:36,
                 from /root/lustre-release/lustre/include/lustre_lib.h:49,
                 from /root/lustre-release/lustre/include/lustre_dlm.h:46,
                 from /root/lustre-release/lustre/llite/file.c:39:
include/linux/fs.h:1765:47: note: expected ‘struct mnt_idmap *’ but argument is of type ‘struct user_namespace *’
 1765 | bool inode_owner_or_capable(struct mnt_idmap *idmap,
      |                             ~~~~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors

Could you please replace "init_user_ns" with "nop_mnt_idmap" according to https://review.whamcloud.com/50420 ("LU-16667 build: struct mnt_idmap, linux/filelock.h")?

--- Comment (pjones, Mon, 8 Apr 2024 18:04:12 +0000) ---
Merged for 2.16

--- Comment (gerrit, Mon, 8 Apr 2024 15:36:25 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/54572/

Subject: LU-17674 build: use nop_mnt_idmap in inode_owner_or_capable

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 6b4ef5cab9911fe902e02058ac7622db05379f25

--- Comment (gerrit, Tue, 26 Mar 2024 08:48:14 +0000) ---
"Qian Yingjin " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/54572

Subject: LU-17674 build: use nop_mnt_idmap in ionde_owner_or_capable

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 516c2d59991ff51a5b1024c25c351bdbac1b75f5
